2011-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call R and Rscript relative to R_HOME/bin

2011-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/RcppGSL/Makefile: Also create unitTest vignette
	* inst/doc/RcppGSL/RcppGSL-unitTests.Rnw: idem
	* inst/doc/RcppGSL/unitTests/RcppGSL-unitTests.R: idem

2010-12-06  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/RcppGSL/RcppGSL.Rnw: cosmetics

2010-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0 and initial release

2010-11-29  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppGSLForward.h: vector_view<T> now exposes a conversion
	operator to implicitely convert it to the associated gsl_vector_foo * type.
	Similarly matrix_view<T> expose a conversion operator to the associated
	gsl matrix pointer.

2010-11-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGSLExample/: Started as a means to provide a
	simple yet complete example of using RcppGSL in a user package

	* NEWS: Added with initial notes towards a release

2010-11-27  Romain Francois <romain@r-enthusiasts.com>

	* include/include/*h: Updated to satisfy some grumblings from g++

2010-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/fastLm.R: summary() now also computed R2 and adjR2

2010-05-25  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppGSLForward.h : add indexing operator, stl iterator
	and begin() and end() methods to RcppGSL::vector using proxy classes

	* inst/include/RcppGSLForward.h : RcppGSL::matrix gets indexing
	operator(int,int)

	* configure.win: added empty configure.win so that R CMD check does
	not get jealous about the configure script

	* src/Makevars.win: use Brian Ripley's suggestions to anticipate R 2.12.0

	* inst/include/*.h: RcppGSL::vector_view and RcppGSL::matrix_view

2010-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* R/fastLm.R: fastLm is now generic and behaves similar to lm():